--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                 <div class="carousel-item">
                     <i class="fas fa-bolt"></i>
                     <h3>Instalação Elétrica Residencial</h3>
-                    <a href="https://wa.me/seunumero" class="cta-button">Saiba Mais</a>
+                    <a href="https://wa.me/5581996847246" class="cta-button">Saiba Mais</a>
                 </div>
                 <div class="carousel-item">
                     <i class="fas fa-tools"></i>
@@ -362,7 +362,7 @@
                 <div class="carousel-item">
                     <i class="fas fa-home"></i>
                     <h3>Automação Residencial</h3>
-                    <a href="https://wa.me/seunumero" class="cta-button">Saiba Mais</a>
+                    <a href="https://wa.me/5581996847246" class="cta-button">Saiba Mais</a>
                 </div>
             </div>
             <div class="carousel-controls">
@@ -420,11 +420,11 @@
     <section id="contact" class="section">
         <h2>Entre em Contato</h2>
         <p class="cta">Precisa de um serviço elétrico? Estamos aqui para ajudar. Entre em contato agora e faça seu orçamento!</p>
-        <a href="https://wa.me/seunumero">Fale Conosco pelo WhatsApp</a>
+        <a href="https://wa.me/5581996847246">Fale Conosco pelo WhatsApp</a>
     </section>
 
     <!-- Botão do WhatsApp -->
-    <a href="https://wa.me/seunumero" class="whatsapp-button" target="_blank">
+    <a href="https://wa.me/5581996847246" class="whatsapp-button" target="_blank">
         <i class="fab fa-whatsapp"></i>
     </a>
 
