--- a/index.html
+++ b/index.html
@@ -1,15 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-12Z4S6FBTJ"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-12Z4S6FBTJ');
-</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flow Eletrotech</title>
@@ -353,6 +344,13 @@
         </div>
     </section>
 
+    <!-- Seção do Instagram -->
+<section id="instagram" class="section">
+    <h2>Siga-nos no Instagram</h2>
+        <!-- SnapWidget -->
+<iframe src="https://snapwidget.com/embed/1076645" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:765px; height:510px" title="Posts from Instagram"></iframe>
+</section>
+
     <!-- Seção de Serviços -->
     <section id="services" class="section">
         <h2>Nossos Serviços</h2>
@@ -361,7 +359,7 @@
                 <div class="carousel-item">
                     <i class="fas fa-bolt"></i>
                     <h3>Instalação Elétrica Residencial</h3>
-                    <a href="https://wa.me/5581996847246" class="cta-button">Saiba Mais</a>
+                    <a href="https://wa.me/seunumero" class="cta-button">Saiba Mais</a>
                 </div>
                 <div class="carousel-item">
                     <i class="fas fa-tools"></i>
@@ -371,7 +369,7 @@
                 <div class="carousel-item">
                     <i class="fas fa-home"></i>
                     <h3>Automação Residencial</h3>
-                    <a href="https://wa.me/5581996847246" class="cta-button">Saiba Mais</a>
+                    <a href="https://wa.me/seunumero" class="cta-button">Saiba Mais</a>
                 </div>
             </div>
             <div class="carousel-controls">
@@ -429,11 +427,11 @@
     <section id="contact" class="section">
         <h2>Entre em Contato</h2>
         <p class="cta">Precisa de um serviço elétrico? Estamos aqui para ajudar. Entre em contato agora e faça seu orçamento!</p>
-        <a href="https://wa.me/5581996847246">Fale Conosco pelo WhatsApp</a>
+        <a href="https://wa.me/seunumero">Fale Conosco pelo WhatsApp</a>
     </section>
 
     <!-- Botão do WhatsApp -->
-    <a href="https://wa.me/5581996847246" class="whatsapp-button" target="_blank">
+    <a href="https://wa.me/seunumero" class="whatsapp-button" target="_blank">
         <i class="fab fa-whatsapp"></i>
     </a>
 
