--- a/index.html
+++ b/index.html
@@ -345,12 +345,12 @@
     </section>
 
     <!-- Seção do Instagram -->
-<section id="instagram" class="section">
-    <h2>Siga-nos no Instagram</h2>
-        <!-- SnapWidget -->
-<iframe src="https://snapwidget.com/embed/1076645" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:765px; height:510px" title="Posts from Instagram"></iframe>
-</section>
-<!-- LightWidget WIDGET --><script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="http://lightwidget.com/widgets/ee29fa394812566b918e2f1b37d3ab76.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
+    <section id="instagram" class="section">
+        <h2>Siga-nos no Instagram</h2>
+            <!-- SnapWidget -->
+    <iframe src="https://snapwidget.com/embed/1076645" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:765px; height:510px" title="Posts from Instagram"></iframe>
+    </section>
+
     <!-- Seção de Serviços -->
     <section id="services" class="section">
         <h2>Nossos Serviços</h2>
@@ -431,7 +431,7 @@
     </section>
 
     <!-- Botão do WhatsApp -->
-    <a href="https://wa.me/seunumero" class="whatsapp-button" target="_blank">
+    <a href="https://wa.me/5581996847246" class="whatsapp-button" target="_blank">
         <i class="fab fa-whatsapp"></i>
     </a>
 
