--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
         <div class="logo">Flow Eletrotech</div>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
+                <li><a href="http://floweletrotech.com.br/">Home</a></li>
                 <li><a href="#services">Serviços</a></li>
                 <li><a href="#about">Sobre Nós</a></li>
                 <li><a href="#testimonials">Depoimentos</a></li>
