--- a/index.html
+++ b/index.html
@@ -354,12 +354,10 @@
     </section>
 
     <!-- Seção do Instagram -->
-    <section id="instagram" class="section">
-        <h2>Siga-nos no Instagram</h2>
-            <!-- SnapWidget -->
-    <iframe src="https://snapwidget.com/embed/1076645" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:765px; height:510px" title="Posts from Instagram"></iframe>
-    </section>
-
+<section id="instagram" class="section">
+    <h2>Siga-nos no Instagram</h2>
+    <!-- LightWidget WIDGET --><script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="http://lightwidget.com/widgets/ee29fa394812566b918e2f1b37d3ab76.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
+</section>
     <!-- Seção de Serviços -->
     <section id="services" class="section">
         <h2>Nossos Serviços</h2>
