--- a/minesite.html
+++ b/minesite.html
@@ -89,10 +89,10 @@
     <div class="container">
         <p class="cta">Conecte-se com a Flow Eletrotech nas redes sociais!</p>
         <div class="button-container">
-            <a href="https://flavinhopb.github.io/floweletrotech/" target="_blank">
+            <a href="https://floweletrotech.com.br/" target="_blank">
                 <i class="fas fa-globe"></i> Visite nosso site
             </a>
-            <a href="https://www.instagram.com/flavioeletricistacaruaru/ target="_blank">
+            <a href="https://www.instagram.com/floweletrotech/ target="_blank">
                 <i class="fab fa-instagram"></i> Instagram
             </a>
             <a href="https://www.tiktok.com/@seuusuario" target="_blank">
